[project]
name = "salt-pki"
version = "1.0.1"
dependencies = ["acme", "cryptography", "distro", "salt"]
requires-python = ">=3.10,<4.0"

[project.optional-dependencies]
test = ["matchlib", "pylint~=3.3.3", "pytest~=8.3.2"]

[tool.pyright]
include = ["salt_tower", "test"]
exclude = ["test/fixtures"]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.ruff]
builtins = ["__grains__", "__opts__", "__pillar__", "__salt__"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv]
dev-dependencies = [
    "matchlib",
    "mypy~=1.3",
    "pylint~=3.3.3",
    "pytest~=8.3.2",
    "ruff==0.11.10",
    "tox~=4.26.0",
    "tox-uv>=1.25.0",
    "uv<0.6.0",
]
