[project]
name = "salt-pki"
version = "1.0.1"
dependencies = ["acme", "cryptography", "distro", "salt"]
requires-python = ">=3.10,<4.0"

[dependency-groups]
test = [
  "matchlib",      #
  "pylint~=3.3.3",
  "pytest~=8.4.0",
]
dev = [
  { include-group = "test" }, #
  "mypy~=1.3",
  "ruff==0.12.9",
  "tox~=4.28.4",
]

[tool.pyright]
include = ["salt_tower", "test"]
exclude = ["test/fixtures"]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.ruff]
builtins = ["__grains__", "__opts__", "__pillar__", "__salt__"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]
